@@ -9,6 +9,7 @@ Changes in Release 2.5.4
 [JOST-193] - Make the implementation of custom bootstrap code easier, without relying on private data from DefaultBootstrap
 [JOST-194] - org.opensaml.ESAPISecurityConfig should use singleton pattern like the default ESAPI reference class
 [JOST-195] - Use system property-based override for our custom ESAPI config rather than ESAPI locator class call 
+[JOST-196] - On MetadataProviderCredentialResolver, expose the MetadataProvider used to construct the resolver
 
 Changes in Release 2.5.3
 =============================================
